# iLibraryApp

./: .gitignore  README.md  _config.yml  build_tool.py  make_install.sh  pyproject.toml  requirements.txt
.github/: build-windwos.yml
.github/workflows/: CD.yml  build-macos.yml  build-windwos.yml  jekyll-gh-pages.yml  macos.yml  windows.yml
_includes/: head-custom.html
src/: main.py  test.py
src/assets/: app.json
src/content/: all_libraries.py  all_users.py  config.py  db_manager.py  functions.py  settings.py  single_library_info.py  single_user_info.py  sync_worker.py
src/content/HelperStuff/: nav_util.py
src/content/LibraryStuff/: all_libraries.py  single_library_info.py
src/content/UserStuff/: all_users.py  single_user_info.py
