[project]
name = "ilibrary"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Andreas Legner", email = "ilibrary@legner.beer" }
]
dependencies = [
    "flet==0.28.3",
    "dotenv",
    "iLibrary==0.0.12",
    "paramiko",
    "pyodbc==5.3.0",
    "certifi"


]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "legner.beer"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "iLibrary"

# company name to display in about app dialogs
company = "legner.beer"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by legner.beer"

[tool.flet.app]
path = "src"
[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "dotenv",
    "iLibrary==0.0.12",
    "paramiko",
    "pyodbc==5.3.0",
    "certifi"

]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}