[project]
name = "iLlibrary"
version = "0.0.3"
description = "Streamline IBM i tool with automated Save File management and instant user profile insights."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Andreas Legner", email = "ilibrary@legner.beer" }
]
dependencies = [
    "flet==0.82.0",
    "python-dotenv==1.2.2",
    "iLibrary==0.0.14",
    "paramiko",
    "pyodbc==5.3.0",
    "certifi",
    "typing_extensions==4.15.0",
    "binaryornot==0.4.4"

]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "legner.beer"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "iLibrary"

# company name to display in about app dialogs
company = "legner.beer"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025-2026 by legner.beer"

[tool.flet.app]
path = "src"
[tool.uv]
dev-dependencies = [
    "flet==0.82.0",
    "python-dotenv==1.2.2",
    "iLibrary==0.0.14",
    "paramiko",
    "pyodbc==5.3.0",
    "certifi",
    "typing_extensions==4.15.0",
    "binaryornot==0.4.4"

]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.82.0"}

[tool.flet.macos]
entitlements = { "com.apple.security.network.client" = true }